<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sh.zoltus</groupId>
    <artifactId>OneCore</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <outputDir>D:\Noa\Minecraft\Servers\@Test_Server\plugins</outputDir>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Removes warnings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Api's -->
        <spigotAPI.version>1.19-R0.1-SNAPSHOT</spigotAPI.version>
        <spigot.server.version>1.19-R0.1-SNAPSHOT</spigot.server.version>
        <spigot.annotations.version>1.2.3-SNAPSHOT</spigot.annotations.version>
        <lombok.version>1.18.24</lombok.version>
        <bstats.version>3.0.0</bstats.version>
        <vault.version>1.7.1</vault.version>
        <commandapi.version>8.4.1</commandapi.version>

        <!-- Maven -->
        <maven.compiler.versions>17</maven.compiler.versions>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.3.1-SNAPSHOT</maven-shade-plugin.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- Reposities -->
    <repositories>
        <!-- SpigotAPI Repo -->
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
        </repository>
        <!-- Vault -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- NBTApi -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
    </repositories>
    <!-- Dependencies -->
    <dependencies>
        <!--Spigot APIS -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>${spigotAPI.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>minecraft-server</artifactId>
            <version>${spigot.server.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- SpigotAnnotations -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>plugin-annotations</artifactId>
            <version>${spigot.annotations.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>bukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- CommandApi -->
        <dependency>
            <groupId>dev.jorel</groupId>
            <artifactId>commandapi-shade</artifactId>
            <version>${commandapi.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>adventure-api</artifactId>
                    <groupId>net.kyori</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>gson</artifactId>
                    <groupId>com.google.code.gson</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>snakeyaml</artifactId>
                    <groupId>org.yaml</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- bstats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>${bstats.version}</version>
        </dependency>
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api-plugin</artifactId>
            <version>2.10.0</version>
        </dependency>
        <!-- MockBukkit
        <dependency>
            <groupId>com.github.seeseemelk</groupId>
            <artifactId>MockBukkit-v1.18</artifactId>
            <version>1.24.1</version>
            <scope>test</scope>
        </dependency>-->
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>resources</directory>
            </resource>
        </resources>
        <plugins>
            <!-- Jar loc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <outputDirectory>${outputDir}</outputDirectory>
                </configuration>
            </plugin>
            <!-- Compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.versions}</release>
                    <compilerArgument>-XDignore.symbol.file</compilerArgument>
                    <encoding>UTF-8</encoding>
                    <!-- Add the processor path for the plugin -->
                    <annotationProcessorPaths>
                        <path>
                            <!-- SpigotAnnotations -->
                            <groupId>org.spigotmc</groupId>
                            <artifactId>plugin-annotations</artifactId>
                            <version>${spigot.annotations.version}</version>
                        </path>
                        <path>
                            <!-- Lombok Processing -->
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <!-- For Shading -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>sh.zoltus.apis.bstats</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>dev.jorel</pattern>
                             <shadedPattern>sh.zoltus.apis.dev.jorel</shadedPattern>
                         </relocation>
                        <relocation>
                            <pattern>de.tr7zw</pattern>
                            <shadedPattern>sh.zoltus.apis.de.tr7zw</shadedPattern>
                        </relocation>
                         <relocation>
                             <pattern>de.leonhard</pattern>
                             <shadedPattern>sh.zoltus.apis.bstats</shadedPattern>
                         </relocation>
                    </relocations>
                </configuration>
            </plugin>
            <!--<plugin>
                <groupId>com.github.wvengen</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <version>2.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <obfuscate>true</obfuscate>
                    <injar>${project.build.finalName}.jar</injar>
                    <outjar>${project.build.finalName}-proguard.jar</outjar>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                    <proguardInclude>${basedir}/proguard.conf</proguardInclude>
                    <libs>
                        <lib>${java.home}/jmods/java.base.jmod</lib>
                   </libs>
                    <options>
                        <option>-dontnote</option>
                        <option>-dontwarn</option>
                        <option>-dontshrink</option>
                        <option>-dontoptimize</option>
                        <option>-repackageclasses 'sh.zoltus.onecore'</option>
                        <option>-keep,includedescriptorclasses class sh.zoltus.apis.** { *; }</option>
                        <option>-keep public class sh.zoltus.onecore.OneCore extends org.bukkit.plugin.java.JavaPlugin { *; }</option>
                        <option>-keepattributes **,*Annotation*,EventHandler,Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,LocalVariable*Table,*Annotation*,Synthetic,EnclosingMethod,Override</option>
                    </options>
                </configuration>
            </plugin>-->
        </plugins>
    </build>
</project>